tests/negative/gold/factory_only_test.gold
tests/negative/factory_only_test.toit:3:7: error: A class with factories must have a constructor.
class A:
      ^
Compilation failed.
